<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">enviodatos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_listado">ListadoActivity</string>
    <string name="registro_exito">Data Add Succesfluy</string>
    <string name="loginGood">Welcome </string>
    <string name="Cerrar_Sesion">Exit </string>
    <string name="Sesion_terminada">Session Finished</string>
    <string name="Ingreso_exito">Login Succes</string>
    <string name="Login_error">Login Error</string>    
    <string name="Login">Login</string>    
    <string name="Login_error_mensaje">User or Password Wrong</string>
    <string name="No_btn">No</string>
    <string name="Si_btn">Yes</string>    
    <string name="Salir">Exit</string>
    <string name="Salir_mensaje">Are You Sure ? </string>

    <string name="Nombre">Name:</string>    

    <string name="Apellido">LastName:</string>  
    <string name="Edad">Age:</string> 
    <string name="Edad_test">25</string>  

    <string name="Bienvenido">Welcome to UscoSoft</string>
    <string name="Usuario">User:</string>
    <string name="Usuario_test">Jorge Eliecer</string>
    <string name="Pass">Password:</string>
    <string name="Pass_test">Martinez</string>
    <string name="Enviar_GET">Send Using GET</string>
    <string name="Enviar">Send</string>
    <string name="Listar">List</string>    
</resources>
