<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.enviodatos.AddActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nombre"
        
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/Usuario_test">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Apellido"
        
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/et_apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Pass_test" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Edad"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/et_edad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Edad_test"
        android:inputType="number" />

    <CheckBox
        android:id="@+id/ck_modo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enviar_GET" />

    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Enviar"
        android:onClick="EnviarOnClik" />

    <Button
        android:id="@+id/btn_listar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Listar" 
        android:onClick="listadoOnClick"/>
    
    <TextView 
        android:id="@+id/logoff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#B40404"
        android:layout_marginTop="30dip"
        android:textSize="22sp"
        android:gravity="bottom|center_horizontal"
        android:text="@string/Cerrar_Sesion"
        />

</LinearLayout>
